[package]
name = "dump_blocks"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
hex = "0.4"
dotenv = "0.15"
env_logger = "0.9"

serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
serde = "1.0"

tokio = { version = "1.19", features = ["full"] }

sp-keyring = "7.0.0"

polymesh-api-client = { version = "0.4", path = "../../crates/polymesh-api-client" }

lazy_static = "1.4"
