[package]
name = "settlements"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[workspace]
members = ["."]

[dependencies]
ink = { version = "4.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

polymesh-api = { path = "../../", default-features = false, features = ["ink"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
		"polymesh-api/std",
]
ink-as-dependency = []
