[package]
name = "simple_transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
dotenv = "0.15"
env_logger = "0.11"

tokio = { version = "1.19", features = ["full"] }

sp-keyring = { workspace = true }
subxt-signer = { workspace = true }

polymesh-api = { workspace = true, default-features = true }
