[package]
name = "subscribe_blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
hex = "0.4"
dotenv = "0.15"
env_logger = "0.9"

serde_json = { version = "1.0", features = ["preserve_order"] }
serde = "1.0"

tokio = { version = "1.19", features = ["full"] }

sp-keyring = "7.0.0"

polymesh-api = { version = "1.1", path = "../../" }
