[package]
name = "subxt-transfer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.97"
dotenv = "0.15.0"
env_logger = "0.11.7"
futures = "0.3.31"
parity-scale-codec = { version = "3.7.4", features = ["derive", "bit-vec"] }
subxt = "0.41.0"
subxt-signer = "0.41.0"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }
