[package]
name = "test_api"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
hex = "0.4"
dotenv = "0.15"
env_logger = "0.11"

serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true }

tokio = { version = "1.19", features = ["full"] }

sp-keyring = { workspace = true }

polymesh-api = { workspace = true, default-features = true }
